tree-sitter-nc/test/corpus/expressions.txt
==================
Arithmetic logical bitwise and comparison precedence
==================
int arithmetic = 1 + 2 * 3 ** 4 ** 2 - 5 / 2 % 2
int bits = !1 & 3 ^ 4 | 8 << 2 >> 1
bool comparison = not false and 1 + 2 < 4 or 5 == 6
bool membership = 2 in [1, 2, 3] and 2 != 3
str joined = "a" <> "b" <> "c"
int grouped = -(1 + 2) * 3

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (binary_expression
        (integer)
        (binary_expression
          (integer)
          (binary_expression
            (integer)
            (binary_expression
              (integer)
              (integer)))))
      (binary_expression
        (binary_expression
          (integer)
          (integer))
        (integer))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (binary_expression
        (binary_expression
          (unary_expression
            (integer))
          (integer))
        (integer))
      (binary_expression
        (binary_expression
          (integer)
          (integer))
        (integer))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (binary_expression
        (unary_expression
          (boolean))
        (binary_expression
          (binary_expression
            (integer)
            (integer))
          (integer)))
      (binary_expression
        (integer)
        (integer))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (binary_expression
        (integer)
        (array_expression
          (integer)
          (integer)
          (integer)))
      (binary_expression
        (integer)
        (integer))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (binary_expression
        (string
          (quoted_string
            (string_content)))
        (string
          (quoted_string
            (string_content))))
      (string
        (quoted_string
          (string_content)))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (unary_expression
        (parenthesized_expression
          (binary_expression
            (integer)
            (integer))))
      (integer))))

==================
Nested calls arguments maps and postfix chains
==================
int value = outer(inner(1, 2), ["answer": compute(3), "other": 4])
int selected = factory()(items[0], config.value).entries[1].value
Pair<int, str> pair = Pair<int, str>{.first = 1, .second = "one"}
int generic = helpers.identity<int>(outer(inner(2)))
int converted = @as(int, selected)
@println(pair.first, @args()[0])

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (call_expression
      (identifier)
      (arguments
        (call_expression
          (identifier)
          (arguments
            (integer)
            (integer)))
        (map_expression
          (map_entry
            (string
              (quoted_string
                (string_content)))
            (call_expression
              (identifier)
              (arguments
                (integer))))
          (map_entry
            (string
              (quoted_string
                (string_content)))
            (integer))))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (member_expression
      (index_expression
        (member_expression
          (call_expression
            (call_expression
              (identifier)
              (arguments))
            (arguments
              (index_expression
                (identifier)
                (integer))
              (member_expression
                (identifier)
                (identifier))))
          (identifier))
        (integer))
      (identifier)))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier)
        (type_arguments
          (named_type
            (identifier))
          (named_type
            (identifier))))
      (identifier))
    (struct_expression
      (identifier)
      (type_arguments
        (named_type
          (identifier))
        (named_type
          (identifier)))
      (field_initializer
        (identifier)
        (integer))
      (field_initializer
        (identifier)
        (string
          (quoted_string
            (string_content))))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (type_arguments
        (named_type
          (identifier)))
      (arguments
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (identifier)
              (arguments
                (integer))))))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (cast_expression
      (named_type
        (identifier))
      (identifier)))
  (expression_statement
    (call_expression
      (builtin
        (identifier))
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (index_expression
          (call_expression
            (builtin
              (identifier))
            (arguments))
          (integer))))))

==================
Numeric character tuple array and map literals
==================
uint bases = 0xffu + 0b101u + 0o77u + 42u
float special = NaN
float positive = inf
float negative = -inf
float decimal = 12.50
char letter = 'a'
char escaped = '\n'
char unicode = '\u{1f36a}'
(int, (str, bool)) nested = (1, ("one", true))
int[] values = [1, 2, 3]
[str]int counts = ["one": 1, "two": 2]

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (binary_expression
      (binary_expression
        (binary_expression
          (integer)
          (integer))
        (integer))
      (integer)))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (float))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (float))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (unary_expression
      (float)))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (float))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (character))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (character
      (character_escape)))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (character
      (character_escape)))
  (binding_declaration
    (typed_binding
      (tuple_type
        (named_type
          (identifier))
        (tuple_type
          (named_type
            (identifier))
          (named_type
            (identifier))))
      (identifier))
    (tuple_expression
      (integer)
      (tuple_expression
        (string
          (quoted_string
            (string_content)))
        (boolean))))
  (binding_declaration
    (typed_binding
      (array_type
        (named_type
          (identifier)))
      (identifier))
    (array_expression
      (integer)
      (integer)
      (integer)))
  (binding_declaration
    (typed_binding
      (map_type
        (named_type
          (identifier))
        (named_type
          (identifier)))
      (identifier))
    (map_expression
      (map_entry
        (string
          (quoted_string
            (string_content)))
        (integer))
      (map_entry
        (string
          (quoted_string
            (string_content)))
        (integer)))))

==================
Quoted and multiline strings interpolation and escapes
==================
str escaped = "line\n\r\t\e\\\" \u{1f36a} \{literal}"
str formatted = "answer {outer(inner(1), [1: 2])} and {1 + 2 * 3}"
str multiline = """
  A "quoted" line
  Indented value: {compute(2)}
    Escaped brace: \{not interpolation}
  """

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (string
      (quoted_string
        (string_content)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_content))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (string
      (quoted_string
        (string_content)
        (interpolation
          (call_expression
            (identifier)
            (arguments
              (call_expression
                (identifier)
                (arguments
                  (integer)))
              (map_expression
                (map_entry
                  (integer)
                  (integer))))))
        (string_content)
        (interpolation
          (binary_expression
            (integer)
            (binary_expression
              (integer)
              (integer)))))))
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (string
      (multiline_string
        (multiline_string_content)
        (multiline_string_content)
        (multiline_string_content)
        (multiline_string_content)
        (multiline_string_content)
        (interpolation
          (call_expression
            (identifier)
            (arguments
              (integer))))
        (multiline_string_content)
        (escape_sequence)
        (multiline_string_content)))))
