tree-sitter-nc/test/corpus/incomplete-source.txt
==================
Missing call closer may absorb the following binding during recovery
==================
@println(1
int after = 2

---

(source_file
  (assignment_statement
    (builtin
      (identifier))
    (ERROR
      (integer)
      (identifier)
      (identifier))
    (integer)))

==================
Missing array closer may absorb the following binding during recovery
==================
int[] values = [1, 2
int after = 3

---

(source_file
  (ERROR
    (typed_binding
      (array_type
        (named_type
          (identifier)))
      (identifier))
    (integer)
    (integer)
    (identifier)
    (identifier)
    (integer)))

==================
Missing block closer at EOF retains body
==================
fn work() int {
  int value = 1
  return value

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (identifier))
    (block
      (binding_declaration
        (typed_binding
          (named_type
            (identifier))
          (identifier))
        (integer))
      (return_statement
        (identifier))
      (expression_statement
        (MISSING identifier))
      (MISSING "}"))))

==================
Incomplete generic declaration at EOF
==================
struct Box<type T

---

(source_file
  (ERROR
    (identifier)
    (type_parameter
      (identifier))))

==================
Incomplete postfix at EOF retains object
==================
int value = items[0].

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (member_expression
      (index_expression
        (identifier)
        (integer))
      (MISSING identifier))))

==================
Unterminated quoted string retains UTF-8 content
==================
str text = "café 🍪

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (string
      (quoted_string
        (string_content)
        (MISSING """)))))

==================
Unterminated multiline string retains interpolation
==================
str text = """
茶 {compute(1)}

---

(source_file
  (binding_declaration
    (typed_binding
      (named_type
        (identifier))
      (identifier))
    (string
      (multiline_string
        (multiline_string_content)
        (interpolation
          (call_expression
            (identifier)
            (arguments
              (integer))))
        (multiline_string_content)
        (MISSING """"")))))

==================
Invalid call argument preserves surrounding statements
==================
fn work() {
  @println(1, `, 2)
  int after = 3
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (call_expression
          (builtin
            (identifier))
          (arguments
            (integer)
            (ERROR
              (UNEXPECTED '`'))
            (integer))))
      (binding_declaration
        (typed_binding
          (named_type
            (identifier))
          (identifier))
        (integer)))))
